--- a/index.html
+++ b/index.html
@@ -2,29 +2,171 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-    <header class="header">
-
+    <header class="header border_grey">
+      <div class="logo logo_place_header header_left"></div>
+      <h1 class="header__title header_left">Научиться учиться</h1>
+      <h3 class="header__subtitle header_left">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link text-blue">Узнать &#8594;</a>
+      </h3>
+      <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">
+            Главные проблемы в обучении
+          </h2>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            </div>
+            <div class="two-columns__paragraph">
+              <span class="two-columns__span-accent">
+                Вывод:
+              </span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </div>
+            <div class="two-columns__paragraph">
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <div class="table">
+          <div class="table__cell">
+            <div class="table__heading">86 миллиардов</div>
+            <div class="table__text">Число нейронов в мозге человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">2.1 миллиарда</div>
+            <div class="table__text">Число нуждающихся в повышении квалификации</div>
+            <div class="table__text">Всемирный Банк, 2017</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1000 терабайт</div>
+            <div class="table__text">Объём памяти человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">500 триллионов</div>
+            <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">420 миллионов</div>
+            <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
+            <div class="table__text">Всемирный Банк, 2017</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">17–20 лет</div>
+            <div class="table__text">Пик обучаемости</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1885 год</div>
+            <div class="table__text">Открытие кривой забывания</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1889 год</div>
+            <div class="table__text">Открытие условного рефлекса</div>
+          </div>
+        </div>
       </section>
 
-      <section class="feinman">
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <img class="feynman__main-illustration" src="./images/feynman.png" alt="Нейман, Джон фон">
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table">
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">1</div>
+            <div class="table__text">Выберите привлекательный проект.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">2</div>
+            <div class="table__text">Сосредоточьтесь на каком-то одном навыке.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">3</div>
+            <div class="table__text">Определите целевой уровень мастерства.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">4</div>
+            <div class="table__text">Разбейте навык на элементы.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">5</div>
+            <div class="table__text">Приготовьте всё необходимое для занятий.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">6</div>
+            <div class="table__text">Устраните препятствия для занятий.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">7</div>
+            <div class="table__text">Выделите специальное время для занятий.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">8</div>
+            <div class="table__text">Создайте быстрые петли обратной связи.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">9</div>
+            <div class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading">10</div>
+            <div class="table__text">Уделяйте внимание количеству и скорости.</div>
+          </div>
+        </div>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__colums">
+        <div class="footer__colum_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">&copy; 2020. Алексей Попов</div>
+        </div>
+        <div class="footer__colum_content_info">
+          <div class="footer__colum-heading">
+            О Практикуме
+          </div>
+          <div class="footer__colum-links">
+            <a href="#" class="footer__link">Главная</a>
+            <a href="#" class="footer__link">Концепция</a>
+            <a href="#" class="footer__link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__colum_content_social">
+          <div class="footer__colum-heading">
+            Соцсети
+          </div>
+          <div class="footer__colum-links">
+            <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">
+            Facebook</a>
+            <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">
+            ВКонтакте</a>
+            <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Instagram">
+            Instagram</a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
