--- a/index.html
+++ b/index.html
@@ -92,72 +92,72 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <div class="table">
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">1</div>
-            <div class="table__text">Выберите привлекательный проект.</div>
+            <div class="table__heading table__heading_theme_dark">1</div>
+            <div class="table__text table__text_theme_dark">Выберите привлекательный проект.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">2</div>
-            <div class="table__text">Сосредоточьтесь на каком-то одном навыке.</div>
+            <div class="table__heading table__heading_theme_dark">2</div>
+            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">3</div>
-            <div class="table__text">Определите целевой уровень мастерства.</div>
+            <div class="table__heading table__heading_theme_dark">3</div>
+            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">4</div>
-            <div class="table__text">Разбейте навык на элементы.</div>
+            <div class="table__heading table__heading_theme_dark">4</div>
+            <div class="table__text table__text_theme_dark">Разбейте навык на элементы.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">5</div>
-            <div class="table__text">Приготовьте всё необходимое для занятий.</div>
+            <div class="table__heading table__heading_theme_dark">5</div>
+            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">6</div>
-            <div class="table__text">Устраните препятствия для занятий.</div>
+            <div class="table__heading table__heading_theme_dark">6</div>
+            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">7</div>
-            <div class="table__text">Выделите специальное время для занятий.</div>
+            <div class="table__heading table__heading_theme_dark">7</div>
+            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">8</div>
-            <div class="table__text">Создайте быстрые петли обратной связи.</div>
+            <div class="table__heading table__heading_theme_dark">8</div>
+            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">9</div>
-            <div class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+            <div class="table__heading table__heading_theme_dark">9</div>
+            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading">10</div>
-            <div class="table__text">Уделяйте внимание количеству и скорости.</div>
+            <div class="table__heading table__heading_theme_dark">10</div>
+            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
           </div>
         </div>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__colums">
-        <div class="footer__colum_content_copyright">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <div class="footer__author">&copy; 2020. Алексей Попов</div>
         </div>
-        <div class="footer__colum_content_info">
-          <div class="footer__colum-heading">
+        <div class="footer__column_content_info">
+          <div class="footer__column-heading">
             О Практикуме
           </div>
-          <div class="footer__colum-links">
+          <div class="footer__column-links">
             <a href="#" class="footer__link">Главная</a>
             <a href="#" class="footer__link">Концепция</a>
             <a href="#" class="footer__link">Наставники</a>
           </div>
         </div>
-        <div class="footer__colum_content_social">
-          <div class="footer__colum-heading">
+        <div class="footer__column_content_social">
+          <div class="footer__column-heading">
             Соцсети
           </div>
-          <div class="footer__colum-links">
+          <div class="footer__column-links">
             <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">
             Facebook</a>
             <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">
