--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <div class="page">
-    <header class="header border_grey">
-      <div class="logo logo_place_header header_left"></div>
-      <h1 class="header__title header_left">Научиться учиться</h1>
-      <h3 class="header__subtitle header_left">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link text-blue">Узнать &#8594;</a>
-      </h3>
+    <header class="header">
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать &#8594;</a>
+      </p>
       <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
@@ -25,148 +25,150 @@
             Главные проблемы в обучении
           </h2>
           <div class="two-columns__main-text">
-            <div class="two-columns__paragraph">
+            <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-            </div>
-            <div class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">
                 Вывод:
               </span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </div>
-            <div class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-            </div>
+            </p>
           </div>
         </div>
       </section>
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
-        <div class="table">
-          <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">2.1 миллиарда</div>
-            <div class="table__text">Число нуждающихся в повышении квалификации</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text">Объём памяти человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">420 миллионов</div>
-            <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">17–20 лет</div>
-            <div class="table__text">Пик обучаемости</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1885 год</div>
-            <div class="table__text">Открытие кривой забывания</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1889 год</div>
-            <div class="table__text">Открытие условного рефлекса</div>
-          </div>
-        </div>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <p class="table__heading">86 миллиардов</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">2.1 миллиарда</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1000 терабайт</p>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">500 триллионов</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">420 миллионов</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">17–20 лет</p>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1885 год</p>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1889 год</p>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &#8594;</a>
-        <img class="feynman__main-illustration" src="./images/feynman.png" alt="Нейман, Джон фон">
+        <div class="feynman__main-illustration"></div>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">1</div>
-            <div class="table__text table__text_theme_dark">Выберите привлекательный проект.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">2</div>
-            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">3</div>
-            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">4</div>
-            <div class="table__text table__text_theme_dark">Разбейте навык на элементы.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">5</div>
-            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">6</div>
-            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">7</div>
-            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">8</div>
-            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">9</div>
-            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">10</div>
-            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
-          </div>
-        </div>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">1</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">2</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">3</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">4</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">5</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">6</p>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">7</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">8</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">9</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">10</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+      <ul class="footer__columns">
+        <li class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy; 2020. Алексей Попов</div>
-        </div>
-        <div class="footer__column_content_info">
-          <div class="footer__column-heading">
+          <p class="footer__author">&copy; 2020. Алексей Попов</p>
+        </li>
+        <li class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">
             О Практикуме
-          </div>
-          <div class="footer__column-links">
-            <a href="#" class="footer__link">Главная</a>
-            <a href="#" class="footer__link">Концепция</a>
-            <a href="#" class="footer__link">Наставники</a>
-          </div>
-        </div>
-        <div class="footer__column_content_social">
-          <div class="footer__column-heading">
+          </h3>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__link">Главная</a></li>
+              <li><a href="#" class="footer__link">Концепция</a></li>
+              <li><a href="#" class="footer__link">Наставники</a></li>
+            </ul>
+          </nav>
+        </li>
+        <li class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">
             Соцсети
-          </div>
-          <div class="footer__column-links">
-            <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">
-            Facebook</a>
-            <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">
-            ВКонтакте</a>
-            <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">
-            Instagram</a>
-          </div>
-        </div>
-      </div>
+          </h3>
+          <ul class="footer__column-links">
+            <li> <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">
+            Facebook</a></li>
+            <li></li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">
+            ВКонтакте</a></li>
+            <li></li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">
+            Instagram</a></li>
+          </ul>
+        </li>
+      </ul>
     </footer>
   </div>
 </body>
