--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
             Соцсети
           </h3>
           <ul class="footer__column-links">
-            <li> <a href="#" class="footer__link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">
+            <li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">
             Facebook</a></li>
-            <li></li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">
+            <li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">
             ВКонтакте</a></li>
-            <li></li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">
+            <li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">
             Instagram</a></li>
           </ul>
         </li>
