Третья отпавка на проверку

--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
         </ul>
       </section>
 
-      <section class="feynman">
+      <section class="feynman feynman__main-illustration">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &#8594;</a>
-        <div class="feynman__main-illustration"></div>
       </section>
 
       <section class="kaufman">
@@ -138,12 +137,12 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__columns">
-        <li class="footer__column footer__column_content_copyright">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; 2020. Алексей Попов</p>
-        </li>
-        <li class="footer__column footer__column_content_info">
+        </div>
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">
             О Практикуме
           </h3>
@@ -154,8 +153,8 @@
               <li><a href="#" class="footer__link">Наставники</a></li>
             </ul>
           </nav>
-        </li>
-        <li class="footer__column footer__column_content_social">
+        </div>
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">
             Соцсети
           </h3>
@@ -167,8 +166,8 @@
             <li><a href="#" class="footer__link"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">
             Instagram</a></li>
           </ul>
-        </li>
-      </ul>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
