--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </ul>
       </section>
 
-      <section class="feynman feynman__main-illustration">
+      <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &#8594;</a>
