Спринт 3. Вторая отправка на проверку

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <ul class="video__iframes">
-          <li class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <li>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </li>
-          <li class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <li>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </li>
         </ul>
       </section>
@@ -211,10 +211,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li class="resources__logo"><img src="./images/resources-arzamas.svg" alt="Логотип Амазон"></li>
-          <li class="resources__logo"><img src="./images/resources-n1.svg" alt="Логотип N+1"></li>
-          <li class="resources__logo"><img src="./images/resources-strelka.svg" alt="Логотип Стрелки"></li>
-          <li class="resources__logo"><img src="./images/resources-polka.svg" alt="Логотип Польки"></li>
+          <li class="resources__logo"><a href="#"><img src="./images/resources-arzamas.svg" alt="Логотип Амазон"></a></li>
+          <li class="resources__logo"><a href="#"><img src="./images/resources-n1.svg" alt="Логотип N+1"></a></li>
+          <li class="resources__logo"><a href="#"><img src="./images/resources-strelka.svg" alt="Логотип Стрелки"></a></li>
+          <li class="resources__logo"><a href="#"><img src="./images/resources-polka.svg" alt="Логотип Польки"></a></li>
         </ul>
       </section>
     </main>
